added filtering and getTour
