# API/routes/tours.js
@@ -12,8 +12,10 @@ router.get('/', async (req, res, next) => {
     searchQuery: req.query['searchQuery'],
     minDifficulty: req.query['minDifficulty'],
     maxDifficulty: req.query['maxDifficulty'],
-    minLength: req.query['minLength'],
-    maxLength: req.query['maxLength'],
+    minDistance: req.query['minDistance'],
+    maxDistance: req.query['maxDistance'],
+    minTime: req.query['minTime'],
+    maxTime: req.query['maxTime'],
     location: req.query['location']
   };
 
